[project]
name = "paprotesting"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.1,<0.140.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
